# detecting-bias

./: .gitignore  CMakeLists.txt  README.md  bdpt.exr  detecting_bias.ipynb  detecting_bias.py  detecting_bias_in_monte_carlo_renderers_using_welch’s.ipynb  detecting_bias_in_monte_carlo_renderers_using_welch’s.pptx  main.cpp  pt.exr  pvalhist.py  welch.c  welch.cpp  welch.ipynb
cpp/: CMakeLists.txt  welch.cpp
